Support for Regex delimiters