@@ -1,7 +1,6 @@
 import parsers.IntegerParser;
 import parsers.Parser;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class StringCalculator {
@@ -12,7 +11,7 @@ public class StringCalculator {
     }
 
     /**
-     * Sums numbers listed in the String parameter.
+     * @return Sum of the numbers listed in the String parameter.
      */
     public int add(String numberString) {
         if (numberString.isEmpty()) {
@@ -25,7 +24,7 @@ public class StringCalculator {
 
     public static void main(String... args) {
         StringCalculator calculator = new StringCalculator(new IntegerParser());
-        List<String> arguments = Arrays.asList("", "1", "1,2\n3,4\n5", "//;\n1;2;3;");
+        List<String> arguments = List.of("", "1", "1,2\n3,4\n5", "//;\n1;2;3;");
         for (String s:arguments) {
             System.out.println(calculator.add(s));
         }
